@@ -1,3 +1,9 @@
+2010-07-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Extend the test suite.
+
+	* 0_slc/0_trivial/ret.c: New.
+
 2010-07-01  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Extend the test suite.
